Changed encoding stand_text_files_methods.html

--- a/LangGuide/PABCSystemUnit/stand_text_files_methods.html
+++ b/LangGuide/PABCSystemUnit/stand_text_files_methods.html
@@ -21,101 +21,101 @@
 <link rel="StyleSheet" href="../../default.css">
 </head>
 <body>
-<H1>Методы текстовых файлов</H1>
-<p>Для 
-текстовых файлов (тип <code>Text</code>) 
-определены следующие методы:</p>
+<H1>РњРµС‚РѕРґС‹ РґР»СЏ С‚РµРєСЃС‚РѕРІС‹С… С„Р°Р№Р»РѕРІ</H1>
+<p>Р”Р»СЏ 
+С‚РµРєСЃС‚РѕРІС‹С… С„Р°Р№Р»РѕРІ (type <code>Text</code>) 
+РѕРїСЂРµРґРµР»РµРЅС‹ СЃР»РµРґСѓСЋС‰РёРµ РјРµС‚РѕРґС‹:</p>
 &nbsp;<table border=0 CELLPADDING=5>
 	<tr>
 		<td>
 	<code><strong>procedure</strong> Writeln(a,b,...); </code><br>
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Записывает в файл значения a, b, ...
-		и осуществляет переход на следующую строку</td>
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р—Р°РїРёСЃС‹РІР°РµС‚ РІ С„Р°Р№Р» Р·РЅР°С‡РµРЅРёСЏ a, b, ...
+		Рё РѕСЃСѓС‰РµСЃС‚РІР»СЏРµС‚ РїРµСЂРµС…РѕРґ РЅР° СЃР»РµРґСѓСЋС‰СѓСЋ СЃС‚СЂРѕРєСѓ</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>function</strong> ReadInteger: integer; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает значение типа integer, введенное из текстового файла</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ Р·РЅР°С‡РµРЅРёРµ С‚РёРїР° integer, РІРІРµРґРµРЅРЅРѕРµ РёР· С‚РµРєСЃС‚РѕРІРѕРіРѕ С„Р°Р№Р»Р°</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>function</strong> ReadReal: real; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает значение типа real, введенное из текстового файла</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ Р·РЅР°С‡РµРЅРёРµ С‚РёРїР° real, РІРІРµРґРµРЅРЅРѕРµ РёР· С‚РµРєСЃС‚РѕРІРѕРіРѕ С„Р°Р№Р»Р°</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>function</strong> ReadChar: char; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает значение типа char, введенное из текстового файла</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ Р·РЅР°С‡РµРЅРёРµ С‚РёРїР° char, РІРІРµРґРµРЅРЅРѕРµ РёР· С‚РµРєСЃС‚РѕРІРѕРіРѕ С„Р°Р№Р»Р°</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>function</strong> ReadString: string; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает значение типа string, введенное из текстового файла, 
-		без перехода на следующую строку</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ Р·РЅР°С‡РµРЅРёРµ С‚РёРїР° string, РІРІРµРґРµРЅРЅРѕРµ РёР· С‚РµРєСЃС‚РѕРІРѕРіРѕ С„Р°Р№Р»Р°, 
+		Р±РµР· РїРµСЂРµС…РѕРґР° РЅР° СЃР»РµРґСѓСЋС‰СѓСЋ СЃС‚СЂРѕРєСѓ</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>function</strong> ReadBoolean: boolean; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает значение типа boolean, введенное из текстового файла</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ Р·РЅР°С‡РµРЅРёРµ С‚РёРїР° boolean, РІРІРµРґРµРЅРЅРѕРµ РёР· С‚РµРєСЃС‚РѕРІРѕРіРѕ С„Р°Р№Р»Р°</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>function</strong> ReadlnInteger: integer; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает значение типа integer, введенное из текстового файла, 
-		и переходит на следующую строку</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ Р·РЅР°С‡РµРЅРёРµ С‚РёРїР° integer, РІРІРµРґРµРЅРЅРѕРµ РёР· С‚РµРєСЃС‚РѕРІРѕРіРѕ С„Р°Р№Р»Р°, 
+		Рё РїРµСЂРµС…РѕРґРёС‚ РЅР° СЃР»РµРґСѓСЋС‰СѓСЋ СЃС‚СЂРѕРєСѓ</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>function</strong> ReadlnReal: real; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает значение типа real, введенное из текстового файла, и 
-		переходит на следующую строку</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ Р·РЅР°С‡РµРЅРёРµ С‚РёРїР° real, РІРІРµРґРµРЅРЅРѕРµ РёР· С‚РµРєСЃС‚РѕРІРѕРіРѕ С„Р°Р№Р»Р°, Рё 
+		РїРµСЂРµС…РѕРґРёС‚ РЅР° СЃР»РµРґСѓСЋС‰СѓСЋ СЃС‚СЂРѕРєСѓ</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>function</strong> ReadlnChar: char; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает значение типа char, введенное из текстового файла, и 
-		переходит на следующую строку</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ Р·РЅР°С‡РµРЅРёРµ С‚РёРїР° char, РІРІРµРґРµРЅРЅРѕРµ РёР· С‚РµРєСЃС‚РѕРІРѕРіРѕ С„Р°Р№Р»Р°, Рё 
+		РїРµСЂРµС…РѕРґРёС‚ РЅР° СЃР»РµРґСѓСЋС‰СѓСЋ СЃС‚СЂРѕРєСѓ</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>function</strong> ReadlnString: string; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает значение типа string, введенное из текстового файла, 
-		и переходит на следующую строку</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ Р·РЅР°С‡РµРЅРёРµ С‚РёРїР° string, РІРІРµРґРµРЅРЅРѕРµ РёР· С‚РµРєСЃС‚РѕРІРѕРіРѕ С„Р°Р№Р»Р°, 
+		Рё РїРµСЂРµС…РѕРґРёС‚ РЅР° СЃР»РµРґСѓСЋС‰СѓСЋ СЃС‚СЂРѕРєСѓ</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>function</strong> ReadlnBoolean: boolean; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает значение типа boolean, введенное из текстового файла, 
-		и переходит на следующую строку</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ Р·РЅР°С‡РµРЅРёРµ С‚РёРїР° boolean, РІРІРµРґРµРЅРЅРѕРµ РёР· С‚РµРєСЃС‚РѕРІРѕРіРѕ С„Р°Р№Р»Р°, 
+		Рё РїРµСЂРµС…РѕРґРёС‚ РЅР° СЃР»РµРґСѓСЋС‰СѓСЋ СЃС‚СЂРѕРєСѓ</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>function</strong> Eoln: boolean; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает True, если достигнут конец строки, и False в 
-		противном случае</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ True, РµСЃР»Рё РґРѕСЃС‚РёРіРЅСѓС‚ РєРѕРЅРµС† СЃС‚СЂРѕРєРё, Рё False РІ 
+		РїСЂРѕС‚РёРІРЅРѕРј СЃР»СѓС‡Р°Рµ</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>function</strong> SeekEof: boolean; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Пропускает пробельные символы, после чего возвращает True, если 
-		достигнут конец файла</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;РџСЂРѕРїСѓСЃРєР°РµС‚ РїСЂРѕР±РµР»СЊРЅС‹Рµ СЃРёРјРІРѕР»С‹, РїРѕСЃР»Рµ С‡РµРіРѕ РІРѕР·РІСЂР°С‰Р°РµС‚ True, РµСЃР»Рё 
+		РґРѕСЃС‚РёРіРЅСѓС‚ РєРѕРЅРµС† С„Р°Р№Р»Р°</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>function</strong> SeekEoln: boolean; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Пропускает пробельные символы, после чего возвращает True, если 
-		достигнут конец строки в файле</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;РџСЂРѕРїСѓСЃРєР°РµС‚ РїСЂРѕР±РµР»СЊРЅС‹Рµ СЃРёРјРІРѕР»С‹, РїРѕСЃР»Рµ С‡РµРіРѕ РІРѕР·РІСЂР°С‰Р°РµС‚ True, РµСЃР»Рё 
+		РґРѕСЃС‚РёРіРЅСѓС‚ РєРѕРЅРµС† СЃС‚СЂРѕРєРё РІ С„Р°Р№Р»Рµ</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>procedure</strong> Flush; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Записывает содержимое буфера файла на диск</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р—Р°РїРёСЃС‹РІР°РµС‚ СЃРѕРґРµСЂР¶РёРјРѕРµ Р±СѓС„РµСЂР° С„Р°Р№Р»Р° РЅР° РґРёСЃРє</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>function</strong> ReadToEnd: string; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает в виде строки содержимое файла от текущего положения 
-		до конца</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ РІ РІРёРґРµ СЃС‚СЂРѕРєРё СЃРѕРґРµСЂР¶РёРјРѕРµ С„Р°Р№Р»Р° РѕС‚ С‚РµРєСѓС‰РµРіРѕ РїРѕР»РѕР¶РµРЅРёСЏ 
+		РґРѕ РєРѕРЅС†Р°</td>
 	</tr>
 	</table>
 </body></html>
