Corrected stand_text_files_methods.html

--- a/LangGuide/PABCSystemUnit/stand_text_files_methods.html
+++ b/LangGuide/PABCSystemUnit/stand_text_files_methods.html
@@ -29,7 +29,7 @@ the following methods defined:</p>
 		<td>
 	<code><strong>procedure</strong> Writeln(a,b,...); </code><br>
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Writes values a, b, ... to the file
-		and makes a transition to the next line </td>
+		and skips to the next line </td>
 	</tr>
 	<tr>
 		<td>
@@ -61,31 +61,29 @@ the following methods defined:</p>
 		<td>
 		<code><strong>function</strong> ReadlnInteger: integer; </code><br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns an integer value entered from the text file 
-		and moves to the next line</td>
+		and skips to the next line</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>function</strong> ReadlnReal: real; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns a value of type real, entered from the text file, and
-		moves to the next line</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns a value of type real, entered from the text file, and skips to the next line</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>function</strong> ReadlnChar: char; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns a char value entered from the text file, and
-		moves to the next line</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns a char value entered from the text file, and skips to the next line</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>function</strong> ReadlnString: string; </code><br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns a string value, entered from the text file,
-		and moves to the next line</td>
+		and skips to the next line</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>function</strong> ReadlnBoolean: boolean; </code><br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns a boolean value, entered from the text file,
-		and moves to the next line</td>
+		and skips to the next line</td>
 	</tr>
 	<tr>
 		<td>
