Encoding to PABCSystemUnit/Old/consts.html

--- a/LangGuide/PABCSystemUnit/Old/consts.htm
+++ b/LangGuide/PABCSystemUnit/Old/consts.htm
@@ -14,13 +14,13 @@
 
 <body>
 
-<H1>Стандартные константы</H1>
+<H1>РЎС‚Р°РЅРґР°СЂС‚РЅС‹Рµ РєРѕРЅСЃС‚Р°РЅС‚С‹</H1>
 <table border="0" width="100%" id="table1">
 	<!-- MSTableType="nolayout" -->
 	<tr>
-		<td width="21%" valign="top"><b>Имя</b></td>
-		<td width="14%" valign="top"><b>Тип</b></td>
-		<td valign="top"><b>Значение</b></td>
+		<td width="21%" valign="top"><b>РРјСЏ</b></td>
+		<td width="14%" valign="top"><b>РўРёРї</b></td>
+		<td valign="top"><b>Р—РЅР°С‡РµРЅРёРµ</b></td>
 	</tr>
 	<tr>
 		<td width="21%" valign="top">
@@ -32,21 +32,21 @@
 		<td width="21%" valign="top">
 		<code>MaxInt</code></td>
 		<td width="14%" valign="top"><code>integer</code></td>
-		<td valign="top">Максимальное значение типа 
+		<td valign="top">РњР°РєСЃРёРјР°Р»СЊРЅРѕРµ Р·РЅР°С‡РµРЅРёРµ С‚РёРїР° 
 		<code>integer</code>: <code>2147483647</code></td>
 	</tr>
 	<tr>
 		<td width="21%" valign="top">
 		<code>MaxReal</code></td>
 		<td width="14%" valign="top"><code>real</code></td>
-		<td valign="top">Максимальное значение типа 
+		<td valign="top">РњР°РєСЃРёРјР°Р»СЊРЅРѕРµ Р·РЅР°С‡РµРЅРёРµ С‚РёРїР° 
 		<code>real</code>: <code>1.7E308</code></td>
 	</tr>
 	<tr>
 		<td width="21%" valign="top">
 		<code>MinReal</code></td>
 		<td width="14%" valign="top"><code>real</code></td>
-		<td valign="top">Минимальное положительное значение типа <code>
+		<td valign="top">РњРёРЅРёРјР°Р»СЊРЅРѕРµ РїРѕР»РѕР¶РёС‚РµР»СЊРЅРѕРµ Р·РЅР°С‡РµРЅРёРµ С‚РёРїР° <code>
 		real</code>: <code>4.94065645841247E-324</code></td>
 	</tr>
 	</table>
