Translated PABCSystemUnit/Old/consts.htm

--- a/LangGuide/PABCSystemUnit/Old/consts.htm
+++ b/LangGuide/PABCSystemUnit/Old/consts.htm
@@ -14,13 +14,13 @@
 
 <body>
 
-<H1>Стандартные константы</H1>
+<H1>Standard constants</H1>
 <table border="0" width="100%" id="table1">
 	<!-- MSTableType="nolayout" -->
 	<tr>
-		<td width="21%" valign="top"><b>Имя</b></td>
-		<td width="14%" valign="top"><b>Тип</b></td>
-		<td valign="top"><b>Значение</b></td>
+		<td width="21%" valign="top"><b>Name</b></td>
+		<td width="14%" valign="top"><b>Type</b></td>
+		<td valign="top"><b>Value</b></td>
 	</tr>
 	<tr>
 		<td width="21%" valign="top">
@@ -32,22 +32,22 @@
 		<td width="21%" valign="top">
 		<code>MaxInt</code></td>
 		<td width="14%" valign="top"><code>integer</code></td>
-		<td valign="top">Максимальное значение типа 
-		<code>integer</code>: <code>2147483647</code></td>
+		<td valign="top">The maximum value of
+		<code>integer</code> type: <code>2147483647</code></td>
 	</tr>
 	<tr>
 		<td width="21%" valign="top">
 		<code>MaxReal</code></td>
 		<td width="14%" valign="top"><code>real</code></td>
-		<td valign="top">Максимальное значение типа 
-		<code>real</code>: <code>1.7E308</code></td>
+		<td valign="top">The maximum value of
+		<code>real</code> type: <code>1.7E308</code></td>
 	</tr>
 	<tr>
 		<td width="21%" valign="top">
 		<code>MinReal</code></td>
 		<td width="14%" valign="top"><code>real</code></td>
-		<td valign="top">Минимальное положительное значение типа <code>
-		real</code>: <code>4.94065645841247E-324</code></td>
+		<td valign="top">The minimum positive value of <code>
+		real</code> type: <code>4.94065645841247E-324</code></td>
 	</tr>
 	</table>
 </body>
